experiment exact equi query and remove pandas etc from docker file

--- a/docker-redis-sqlite-python/Dockerfile
+++ b/docker-redis-sqlite-python/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get install -y python3-pip
 RUN pip3 install redis
 
 # Install pandas, plotly, and sqlparse libraries
-RUN pip3 install pandas plotly sqlparse
+# RUN pip3 install pandas plotly sqlparse
 
 # Expose Redis port
 EXPOSE 6379
@@ -35,8 +35,6 @@ CMD []
 #   -p 8001:8001 \
 #   -v /Users/israelgonzalez/Documents/Development/nmsu/nmsu-cs582-db2-group-project/project:/mnt \
 #   redis-sqlite-python redis-server --dir /mnt/data --dbfilename dump.rdb --protected-mode no --appendonly no --loadmodule /opt/redis-stack/lib/redisearch.so
-  
-#   --appendonly no --dir /mnt/data --dbfilename dump.rdb --loadmodule /usr/lib/redis/modules/redisearch.so
 
 # redis-cli FT.CREATE idx SCHEMA name TEXT age NUMERIC
 # docker exec -it redis-sqlite-container /bin/bash
