--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.DS_Store
 *.zip, *.gz, *.tar.gz, *.rar, *.7z, *.dmg, *.iso
 *.log, *.sql, *.sqlite, *.sqlite3
+*.rdb, *.mwb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
