removes mysql connector

--- a/docker-redis-sqlite-python/Dockerfile
+++ b/docker-redis-sqlite-python/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get install -y python3
 # Install pip and redis-py library for python3
 RUN apt-get install -y python3-pip
 RUN pip3 install redis
-RUN pip3 install mysql-connector-python
+# RUN pip3 install mysql-connector-python
 RUN pip3 install sqlparse
 
 # Install MariaDB and dependencies
