ignore tsv files

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.zip, *.gz, *.tar.gz, *.rar, *.7z, *.dmg, *.iso
 *.log, *.sql, *.sqlite, *.sqlite3
 *.rdb, *.mwb
-
+*.log, *.tsv
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
