Revert "Merge branch 'main' of https://github.com/igonzals/nmsu-cs582-db2-group-project"
This reverts commit f46d40afb73e8d793cf4c92a6c48357f46c4ed10, reversing
changes made to f40f40cc433aced64f41fb0394780d51b81a4469.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 *.DS_Store
 *.zip, *.gz, *.tar.gz, *.rar, *.7z, *.dmg, *.iso
-*.log
-*.rdb
-*.tsv
+*.log, *.sql, *.sqlite, *.sqlite3
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -164,5 +163,3 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 project/data/dump.rdb
-project/data/runtimes.tsv
-project/data/runtimes-group.tsv
